objects/LeadHistory__c/LeadHistory__c.object-meta.xml
<CustomObject>
    <description>This object has been completed to provide a smaller set of field changes to the EDW team since ingesting the standard Salesforce LeadHistory object is too large and consumes to much space within AWS. Jira ticket SS-9176</description>
    <label>LeadHistory</label>
    <nameField>
        <displayFormat>LH-{000000}</displayFormat>
        <label>LeadHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>