objects/LeadHistory__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The field on the Lead record that was changed</description>
    <inlineHelpText>This is the field that was changed on the Lead record</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>