objects/LeadHistory__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead record that was updated</description>
    <inlineHelpText>The Lead record that was updated</inlineHelpText>
    <label>LeadId</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LeadHistory</relationshipLabel>
    <relationshipName>LeadHistory</relationshipName>
    <type>Lookup</type>
</CustomField>