objects/LeadHistory__c/fields/StandardLeadHistoryID__c.field-meta.xml
<CustomField>
    <fullName>StandardLeadHistoryID__c</fullName>
    <description>The ID of the record in the standard LeadHistory object</description>
    <inlineHelpText>The ID of the record in the standard LeadHistory object</inlineHelpText>
    <label>StandardLeadHistoryID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>