objects/LeadHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StandardLeadHistoryID__c</columns>
    <columns>LeadId__c</columns>
    <columns>Field__c</columns>
    <columns>OldValue__c</columns>
    <columns>NewValue__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>